[gd_scene load_steps=4 format=1]

[ext_resource path="res://res/images/black-1x1.png" type="Texture" id=1]
[ext_resource path="res://scripts/game_scene.gd" type="Script" id=2]
[ext_resource path="res://res/test-tileset.xml" type="TileSet" id=3]

[node name="Sprite" type="Sprite"]

texture = ExtResource( 1 )
offset = Vector2( 960, 540 )
region = true
region_rect = Rect2( 0, 0, 1920, 1080 )
script/script = ExtResource( 2 )

[node name="ControlPane_Top" type="Control" parent="."]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 60.0

[node name="DayLabel" type="Label" parent="ControlPane_Top"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 20.0
margin/right = -10.0
margin/bottom = 34.0
text = "[DayLabelText]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DayPanel" type="Panel" parent="ControlPane_Top/DayLabel"]

visibility/behind_parent = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -30.0
margin/top = -13.0
margin/right = -30.0
margin/bottom = 27.0

[node name="MoneyLabel" type="Label" parent="ControlPane_Top/DayLabel"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -119.5
margin/top = 0.0
margin/right = -231.5
margin/bottom = 0.0
text = "[MoneyLabelText]"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MoneyPanel" type="Panel" parent="ControlPane_Top/DayLabel/MoneyLabel"]

visibility/behind_parent = true
material/use_parent = true
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -20.0
margin/top = -13.0
margin/right = -20.0
margin/bottom = 27.0

[node name="GameTileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 3 )
cell/size = Vector2( 32, 32 )
cell/quadrant_size = 32
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 131075, 0, 196613, 0, 393223, 0, 393234, 0, 524298, 0, 524310, 0, 589843, 0, 589844, 0, 589846, 0, 589848, 0, 589849, 0, 589850, 0, 589851, 0, 589852, 0, 720908, 0, 720926, 0, 786449, 0, 786463, 0, 851999, 0, 917515, 0, 917535, 0, 983052, 0, 983070, 0, 1048589, 0, 1048591, 0, 1048604, 0, 1048605, 0, 1114128, 0, 1114131, 0, 1114133, 0, 1114136, 0, 1114138, 0, 1114139, 0 )


